package com.android.sharemate.ui.navigation

object NavigationTestTags {
  const val FRIDGE_TAB = "fridge_tab"
  const val RECIPES_TAB = "recipes_tab"
  const val RECEIPTS_TAB = "receipts_tab"
  const val SETTINGS_TAB = "settings_tab"
  const val PAGE_CONTENT = "page_content"
}

